# vision-mcp

./: .gitignore  README.md  pyproject.toml
fine-tuning/trained-sd3/logs/dreambooth-sd3/: events.out.tfevents.1746238107.Seths-Laptop.local.7518.0  events.out.tfevents.1746238370.Seths-Laptop.local.7576.0
fine-tuning/trained-sd3/logs/dreambooth-sd3/1746238107.876524/: events.out.tfevents.1746238107.Seths-Laptop.local.7518.1
fine-tuning/trained-sd3/logs/dreambooth-sd3/1746238107.8773649/: hparams.yml
fine-tuning/trained-sd3/logs/dreambooth-sd3/1746238370.194426/: events.out.tfevents.1746238370.Seths-Laptop.local.7576.1
fine-tuning/trained-sd3/logs/dreambooth-sd3/1746238370.1952808/: hparams.yml
report/: REPORT.md
src/: mcp_text_overlay.py  text_overlay.py
src/models/: stable_diffusion_image_generator.py
src/services/overlay/: overlay.py
src/services/s3/: s3_service.py
vision_mcp.egg-info/: PKG-INFO  SOURCES.txt
