[project]
name = "vision-mcp"
version = "0.1.0"
description = "A mcp for image processing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "requests>=2.32.3",
    "protobuf>=6.30.2",
    "sentencepiece>=0.2.0",
    "boto3>=1.38.6",
    "dotenv>=0.9.9",
    "diffusers>=0.33.1",
]
